--- a/css/brands.css
+++ b/css/brands.css
@@ -46,18 +46,21 @@ button {
   outline: none;
   border-radius: 8px;
   cursor: pointer;
-  
-}     
+
+}
+
 button:hover,
 .button:focus {
   color: #212121;
   border-color: #888;
   outline: #7AB8FF solid 3px
 }
+
 .button.button-primary {
   color: #fff;
   filter: brightness(90%);
 }
+
 .button.button-primary:hover,
 .button.button-primary:focus {
   color: #fff;
@@ -82,6 +85,7 @@ button:hover,
   color: #ffffff;
   background-color: #2457F5;
 }
+
 .button.button-default:hover,
 .button.button-default:focus {
   filter: brightness(90%);
@@ -93,6 +97,7 @@ button:hover,
   background-color: #FFFFFF;
   border: 1px solid #212121;
 }
+
 .button.button-amazon:hover,
 .button.button-amazon:focus {
   filter: brightness(90%);
@@ -103,6 +108,7 @@ button:hover,
   color: #000000;
   background-color: #25D1DA;
 }
+
 .button.button-amazon-music:hover,
 .button.button-amazon-music:focus {
   filter: brightness(90%);
@@ -114,6 +120,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-appstore:hover,
 .button.button-appstore:focus {
   filter: brightness(90%);
@@ -125,6 +132,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-apple-music:hover,
 .button.button-apple-music:focus {
   filter: brightness(90%);
@@ -135,6 +143,7 @@ button:hover,
   color: #ffffff;
   background-image: linear-gradient(to bottom, #FB5C74, #FA233B);
 }
+
 .button.button-apple-music-alt:hover,
 .button.button-apple-music-alt:focus {
   filter: brightness(90%);
@@ -146,6 +155,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-apple-podcasts:hover,
 .button.button-apple-podcasts:focus {
   filter: brightness(90%);
@@ -156,6 +166,7 @@ button:hover,
   color: #ffffff;
   background-image: linear-gradient(to bottom, #F452FF, #832BC1);
 }
+
 .button.button-apple-podcasts-alt:hover,
 .button.button-apple-podcasts-alt:focus {
   filter: brightness(90%);
@@ -167,6 +178,7 @@ button:hover,
   background-color: #18181C;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-artstation:hover,
 .button.button-artstation:focus {
   filter: brightness(90%);
@@ -177,6 +189,7 @@ button:hover,
   color: #ffffff;
   background-color: #1d9fc3;
 }
+
 .button.button-bandcamp:hover,
 .button.button-bandcamp:focus {
   filter: brightness(90%);
@@ -187,6 +200,7 @@ button:hover,
   color: #ffffff;
   background-color: #0057FF;
 }
+
 .button.button-behance:hover,
 .button.button-behance:focus {
   filter: brightness(90%);
@@ -198,6 +212,7 @@ button:hover,
   background-color: #F3F9FF;
   border: 1px solid #212121;
 }
+
 .button.button-bluesky:hover,
 .button.button-bluesky:focus {
   filter: brightness(90%);
@@ -208,6 +223,7 @@ button:hover,
   color: #000000;
   background-color: #ffdd00;
 }
+
 .button.button-coffee:hover,
 .button.button-coffee:focus {
   filter: brightness(90%);
@@ -219,6 +235,7 @@ button:hover,
   background-color: #292929;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-cal:hover,
 .button.button-cal:focus {
   filter: brightness(90%);
@@ -229,6 +246,7 @@ button:hover,
   color: #FFFFFF;
   background-color: #006BFF;
 }
+
 .button.button-calendly:hover,
 .button.button-calendly:focus {
   filter: brightness(90%);
@@ -239,6 +257,7 @@ button:hover,
   color: #ffffff;
   background-image: linear-gradient(to bottom, #00d64b, #00c244);
 }
+
 .button.button-cash-app:hover,
 .button.button-cash-app:focus {
   filter: brightness(90%);
@@ -250,6 +269,7 @@ button:hover,
   background-color: #F1EFE3;
   border: 1px solid #212121;
 }
+
 .button.button-clubhouse:hover,
 .button.button-clubhouse:focus {
   filter: brightness(90%);
@@ -261,6 +281,7 @@ button:hover,
   background-color: #f5f5f5;
   border: 1px solid #212121;
 }
+
 .button.button-dev-to:hover,
 .button.button-dev-to:focus {
   filter: brightness(90%);
@@ -271,6 +292,7 @@ button:hover,
   color: #ffffff;
   background-color: #5865f2;
 }
+
 .button.button-discord:hover,
 .button.button-discord:focus {
   filter: brightness(90%);
@@ -282,6 +304,7 @@ button:hover,
   background-color: #FFFFFF;
   border: 1px solid #212121;
 }
+
 .button.button-dribbble:hover,
 .button.button-dribbble:focus {
   filter: brightness(90%);
@@ -292,6 +315,7 @@ button:hover,
   color: #ffffff;
   background-color: #F45800;
 }
+
 .button.button-etsy:hover,
 .button.button-etsy:focus {
   filter: brightness(90%);
@@ -302,6 +326,7 @@ button:hover,
   color: #ffffff;
   background-color: #1877f2;
 }
+
 .button.button-faceb:hover,
 .button.button-faceb:focus {
   filter: brightness(90%);
@@ -310,16 +335,15 @@ button:hover,
 /* Facebook Messenger */
 .button.button-messenger {
   color: #ffffff;
-  background-image: linear-gradient(
-    25deg,
-    #0099ff,
-    #5f5dff,
-    #a033ff,
-    #c740cc,
-    #ff5280,
-    #ff7061
-  );
+  background-image: linear-gradient(25deg,
+      #0099ff,
+      #5f5dff,
+      #a033ff,
+      #c740cc,
+      #ff5280,
+      #ff7061);
 }
+
 .button.button-messenger:hover,
 .button.button-messenger:focus {
   filter: brightness(90%);
@@ -331,6 +355,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-figma:hover,
 .button.button-figma:focus {
   filter: brightness(90%);
@@ -341,6 +366,7 @@ button:hover,
   color: #ffffff;
   background-color: #1DBF73;
 }
+
 .button.button-fiverr:hover,
 .button.button-fiverr:focus {
   filter: brightness(90%);
@@ -352,6 +378,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-flickr:hover,
 .button.button-flickr:focus {
   filter: brightness(90%);
@@ -363,6 +390,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-github:hover,
 .button.button-github:focus {
   filter: brightness(90%);
@@ -373,6 +401,7 @@ button:hover,
   color: #ffffff;
   background-color: #6151b2;
 }
+
 .button.button-gitlab:hover,
 .button.button-gitlab:focus {
   filter: brightness(90%);
@@ -383,6 +412,7 @@ button:hover,
   color: #ffffff;
   background-color: #02A95C;
 }
+
 .button.button-gofundme:hover,
 .button.button-gofundme:focus {
   filter: brightness(90%);
@@ -394,6 +424,7 @@ button:hover,
   background-color: #f3f1e6;
   border: 1px solid #212121;
 }
+
 .button.button-goodreads:hover,
 .button.button-goodreads:focus {
   filter: brightness(90%);
@@ -405,6 +436,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-google-black:hover,
 .button.button-google-black:focus {
   filter: brightness(90%);
@@ -416,6 +448,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-playstore:hover,
 .button.button-playstore:focus {
   filter: brightness(90%);
@@ -427,6 +460,7 @@ button:hover,
   background-color: #FFFFFF;
   border: 1px solid #212121;
 }
+
 .button.button-google-podcasts:hover,
 .button.button-google-podcasts:focus {
   filter: brightness(90%);
@@ -438,6 +472,7 @@ button:hover,
   background-color: #FFFFFF;
   border: 1px solid #212121;
 }
+
 .button.button-google-scholar:hover,
 .button.button-google-scholar:focus {
   filter: brightness(90%);
@@ -448,6 +483,7 @@ button:hover,
   color: #000000;
   background-color: #F5C400;
 }
+
 .button.button-guilded:hover,
 .button.button-guilded:focus {
   filter: brightness(90%);
@@ -459,6 +495,7 @@ button:hover,
   background-color: #ffffff;
   border: 1px solid #212121;
 }
+
 .button.button-hashnode:hover,
 .button.button-hashnode:focus {
   filter: brightness(90%);
@@ -469,6 +506,7 @@ button:hover,
   color: #ffffff;
   background-image: linear-gradient(-135deg, #1400c8, #b900b4, #f50000);
 }
+
 .button.button-instagram:hover,
 .button.button-instagram:focus {
   filter: brightness(90%);
@@ -476,19 +514,21 @@ button:hover,
 
 /* Kick */
 .button.button-kick {
-  background-color:#000000;
-  color:  #ffffff;
+  background-color: #000000;
+  color: #ffffff;
   border: 1px solid #ffffff;
 }
+
 .button.button-kick:hover {
   filter: brightness(90%);
 }
 
 /* Kick Alt */
 .button.button-kick-alt {
-  background-color:#01e701;
-  color:  #000;
+  background-color: #01e701;
+  color: #000;
 }
+
 .button.button-kick-alt:hover {
   filter: brightness(90%);
 }
@@ -499,6 +539,7 @@ button:hover,
   color: #ffffff;
   background-color: #05ce78;
 }
+
 .button.button-kickstarter:hover,
 .button.button-kickstarter:focus {
   filter: brightness(90%);
@@ -510,6 +551,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-kit:hover,
 .button.button-kit:focus {
   filter: brightness(90%);
@@ -520,6 +562,7 @@ button:hover,
   color: #ffffff;
   background-color: #13C3FF;
 }
+
 .button.button-ko-fi:hover,
 .button.button-ko-fi:focus {
   filter: brightness(90%);
@@ -530,6 +573,7 @@ button:hover,
   color: #ffffff;
   background-color: #D51007;
 }
+
 .button.button-last-fm:hover,
 .button.button-last-fm:focus {
   filter: brightness(90%);
@@ -541,6 +585,7 @@ button:hover,
   background-color: #2c3440;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-letterboxd:hover,
 .button.button-letterboxd:focus {
   filter: brightness(90%);
@@ -551,6 +596,7 @@ button:hover,
   color: #FFFFFF;
   background-color: #06C755;
 }
+
 .button.button-line:hover,
 .button.button-line:focus {
   filter: brightness(90%);
@@ -562,6 +608,7 @@ button:hover,
   color: #ffffff;
   background-color: #2867b2;
 }
+
 .button.button-linked:hover,
 .button.button-linked:focus {
   filter: brightness(90%);
@@ -572,6 +619,7 @@ button:hover,
   color: #000000;
   background-color: #FFE01B;
 }
+
 .button.button-mailchimp:hover,
 .button.button-mailchimp:focus {
   filter: brightness(90%);
@@ -583,6 +631,7 @@ button:hover,
   background-color: #17063B;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-mastodon:hover,
 .button.button-mastodon:focus {
   filter: brightness(90%);
@@ -594,6 +643,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-medium:hover,
 .button.button-medium:focus {
   filter: brightness(90%);
@@ -604,6 +654,7 @@ button:hover,
   color: #ffffff;
   background-image: linear-gradient(-45deg, #ff8d10, #ec1187);
 }
+
 .button.button-ngl:hover,
 .button.button-ngl:focus {
   filter: brightness(90%);
@@ -615,6 +666,7 @@ button:hover,
   border: 1px solid #212121;
   background-color: #ffffff;
 }
+
 .button.button-notion:hover,
 .button.button-notion:focus {
   filter: brightness(90%);
@@ -625,6 +677,7 @@ button:hover,
   color: #ffffff;
   background-color: #00AEEF;
 }
+
 .button.button-onlyfans:hover,
 .button.button-onlyfans:focus {
   filter: brightness(90%);
@@ -635,6 +688,7 @@ button:hover,
   color: #ffffff;
   background-color: #ff424d;
 }
+
 .button.button-patreon:hover,
 .button.button-patreon:focus {
   filter: brightness(90%);
@@ -645,6 +699,7 @@ button:hover,
   color: #ffffff;
   background-color: #003087;
 }
+
 .button.button-paypal:hover,
 .button.button-paypal:focus {
   filter: brightness(90%);
@@ -656,6 +711,7 @@ button:hover,
   background-color: #ffe2eb;
   border: 1px solid #212121;
 }
+
 .button.button-pinterest:hover,
 .button.button-pinterest:focus {
   filter: brightness(90%);
@@ -666,6 +722,7 @@ button:hover,
   color: #ffffff;
   background-color: #678BFF;
 }
+
 .button.button-post-news:hover,
 .button.button-post-news:focus {
   filter: brightness(90%);
@@ -677,6 +734,7 @@ button:hover,
   background-color: #ffffff;
   border: 1px solid #212121;
 }
+
 .button.button-producthunt:hover,
 .button.button-producthunt:focus {
   filter: brightness(90%);
@@ -688,6 +746,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-read-cv:hover,
 .button.button-read-cv:focus {
   filter: brightness(90%);
@@ -699,6 +758,7 @@ button:hover,
   background-color: #ffffff;
   border: 1px solid #212121;
 }
+
 .button.button-redbubble:hover,
 .button.button-redbubble:focus {
   filter: brightness(90%);
@@ -710,6 +770,7 @@ button:hover,
   background-color: #d7dfe2;
   border: 1px solid #212121;
 }
+
 .button.button-reddit:hover,
 .button.button-reddit:focus {
   filter: brightness(90%);
@@ -720,6 +781,7 @@ button:hover,
   color: #ffffff;
   background-color: #5A31F4;
 }
+
 .button.button-shop:hover,
 .button.button-shop:focus {
   filter: brightness(90%);
@@ -730,6 +792,7 @@ button:hover,
   color: #ffffff;
   background-color: #3a76f0;
 }
+
 .button.button-signal:hover,
 .button.button-signal:focus {
   filter: brightness(90%);
@@ -740,6 +803,7 @@ button:hover,
   color: #ffffff;
   background-color: #3189c8;
 }
+
 .button.button-skoob:hover,
 .button.button-skoob:focus {
   filter: brightness(90%);
@@ -751,6 +815,7 @@ button:hover,
   background-color: #FFFFFF;
   border: 1px solid #212121;
 }
+
 .button.button-slack:hover,
 .button.button-slack:focus {
   filter: brightness(90%);
@@ -762,6 +827,7 @@ button:hover,
   color: #000000;
   background-color: #fffc00;
 }
+
 .button.button-snapchat:hover,
 .button.button-snapchat:focus {
   filter: brightness(90%);
@@ -772,6 +838,7 @@ button:hover,
   color: #ffffff;
   background-color: #ff5500;
 }
+
 .button.button-soundcloud:hover,
 .button.button-soundcloud:focus {
   filter: brightness(90%);
@@ -782,6 +849,7 @@ button:hover,
   color: #191414;
   background-color: #1db954;
 }
+
 .button.button-spotify:hover,
 .button.button-spotify:focus {
   filter: brightness(90%);
@@ -793,6 +861,7 @@ button:hover,
   background-color: #191414;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-spotify-alt:hover,
 .button.button-spotify-alt:focus {
   filter: brightness(90%);
@@ -803,6 +872,7 @@ button:hover,
   color: #FFFFFF;
   background-color: #006AFF;
 }
+
 .button.button-square:hover,
 .button.button-square:focus {
   filter: brightness(90%);
@@ -813,6 +883,7 @@ button:hover,
   color: #ffffff;
   background-image: linear-gradient(90deg, #08BBFF, #2B75FF);
 }
+
 .button.button-steam:hover,
 .button.button-steam:focus {
   filter: brightness(90%);
@@ -823,6 +894,7 @@ button:hover,
   color: #ffffff;
   background-color: #fc5200;
 }
+
 .button.button-strava:hover,
 .button.button-strava:focus {
   filter: brightness(90%);
@@ -833,6 +905,7 @@ button:hover,
   color: #ffffff;
   background-color: #FF6719;
 }
+
 .button.button-substack:hover,
 .button.button-substack:focus {
   filter: brightness(90%);
@@ -843,6 +916,7 @@ button:hover,
   color: #ffffff;
   background-color: #3faee8;
 }
+
 .button.button-telegram:hover,
 .button.button-telegram:focus {
   filter: brightness(90%);
@@ -854,6 +928,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-threads:hover,
 .button.button-threads:focus {
   filter: brightness(90%);
@@ -864,6 +939,7 @@ button:hover,
   color: #000000;
   background-color: #3fe669;
 }
+
 .button.button-threema:hover,
 .button.button-threema:focus {
   filter: brightness(90%);
@@ -875,6 +951,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-tiktok:hover,
 .button.button-tiktok:focus {
   filter: brightness(90%);
@@ -885,6 +962,7 @@ button:hover,
   color: #ffffff;
   background-color: #0065ff;
 }
+
 .button.button-trello:hover,
 .button.button-trello:focus {
   filter: brightness(90%);
@@ -896,6 +974,7 @@ button:hover,
   background-color: #131313;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-tumb:hover,
 .button.button-tumb:focus {
   filter: brightness(90%);
@@ -906,6 +985,7 @@ button:hover,
   color: #ffffff;
   background-color: #9146ff;
 }
+
 .button.button-twitch:hover,
 .button.button-twitch:focus {
   filter: brightness(90%);
@@ -916,6 +996,7 @@ button:hover,
   color: #ffffff;
   background-color: #1da1f2;
 }
+
 .button.button-twit:hover,
 .button.button-twit:focus {
   filter: brightness(90%);
@@ -927,6 +1008,7 @@ button:hover,
   background-color: #ffffff;
   border: 1px solid #212121;
 }
+
 .button.button-unsplash:hover,
 .button.button-unsplash:focus {
   filter: brightness(90%);
@@ -937,6 +1019,7 @@ button:hover,
   color: #000000;
   background-color: #ffc000;
 }
+
 .button.button-untappd:hover,
 .button.button-untappd:focus {
   filter: brightness(90%);
@@ -947,6 +1030,7 @@ button:hover,
   color: #FFFFFF;
   background-color: #14A800;
 }
+
 .button.button-upwork:hover,
 .button.button-upwork:focus {
   filter: brightness(90%);
@@ -957,6 +1041,7 @@ button:hover,
   color: #ffffff;
   background-color: #008CFF;
 }
+
 .button.button-venmo:hover,
 .button.button-venmo:focus {
   filter: brightness(90%);
@@ -967,6 +1052,7 @@ button:hover,
   color: #ffffff;
   background-color: #1ab7ea;
 }
+
 .button.button-vimeo:hover,
 .button.button-vimeo:focus {
   filter: brightness(90%);
@@ -978,6 +1064,7 @@ button:hover,
   background-color: #ffffff;
   border: 1px solid black;
 }
+
 .button.button-vrchat:hover,
 .button.button-vrchat:focus {
   filter: brightness(90%);
@@ -989,6 +1076,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-vsco:hover,
 .button.button-vsco:focus {
   filter: brightness(90%);
@@ -1000,6 +1088,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-web:hover,
 .button.button-web:focus {
   filter: brightness(90%);
@@ -1010,6 +1099,7 @@ button:hover,
   color: #ffffff;
   background-color: #455a64;
 }
+
 .button.button-whatsapp:hover,
 .button.button-whatsapp:focus {
   filter: brightness(90%);
@@ -1020,6 +1110,7 @@ button:hover,
   color: #ffffff;
   background-color: #21759b;
 }
+
 .button.button-wordpress:hover,
 .button.button-wordpress:focus {
   filter: brightness(90%);
@@ -1031,6 +1122,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-x:hover,
 .button.button-x:focus {
   filter: brightness(90%);
@@ -1041,6 +1133,7 @@ button:hover,
   color: #ffffff;
   background-color: #026466;
 }
+
 .button.button-xing:hover,
 .button.button-xing:focus {
   filter: brightness(90%);
@@ -1052,6 +1145,7 @@ button:hover,
   background-color: #000000;
   border: 1px solid #FFFFFF;
 }
+
 .button.button-yt:hover,
 .button.button-yt:focus {
   filter: brightness(90%);
@@ -1062,6 +1156,7 @@ button:hover,
   color: #ffffff;
   background-color: #0B5CFF;
 }
+
 .button.button-zoom:hover,
 .button.button-zoom:focus {
   filter: brightness(90%);
